--- a/react-practice/package.json
+++ b/react-practice/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.12.0",
     "@testing-library/react": "^11.2.6",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.1",
     "classnames": "^2.3.1",
     "modern-normalize": "^1.1.0",
     "prop-types": "^15.7.2",
@@ -19,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "api-server": "json-server --delay 200 --watch db.json"
   },
   "eslintConfig": {
     "extends": [
