--- a/react-practice/package.json
+++ b/react-practice/package.json
@@ -12,6 +12,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loader-spinner": "^4.0.0",
     "react-scripts": "4.0.3",
     "shortid": "^2.2.16",
     "web-vitals": "^1.1.1"
@@ -41,6 +42,7 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "http://localhost:3001",
   "devDependencies": {
     "husky": "^6.0.0",
     "lint-staged": "^10.5.4",
